--- a/angular.json
+++ b/angular.json
@@ -63,7 +63,36 @@
                   "maximumError": "10kb"
                 }
               ]
+            },
+            "stag": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.stag.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": false,
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb",
+                  "maximumError": "10kb"
+                }
+              ]
             }
+
           }
         },
         "serve": {
@@ -74,6 +103,9 @@
           "configurations": {
             "production": {
               "browserTarget": "Pluma:build:production"
+            },
+            "stag": {
+              "browserTarget": "Pluma:build:stag"
             }
           }
         },
